modified the themes

--- a/test/index.html
+++ b/test/index.html
@@ -5,9 +5,9 @@
     <title>Article</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
     		<title></title>
-    		<link rel="stylesheet" href="styles/github-markdown.css">
-    		<link rel="stylesheet" href="styles/highlight/arta.css">
-                    <link rel="stylesheet" href="styles/typo.css">
+    		<link rel="stylesheet" href="theme/styles/github-markdown.css">
+    		<link rel="stylesheet" href="theme/styles/highlight/arta.css">
+                    <link rel="stylesheet" href="theme/styles/typo.css">
     		<style>
     			body {
     				box-sizing: border-box;
@@ -195,9 +195,9 @@ Hello, world from a dispatch queue!
 <div class="footer">
     <p>auto generate by  <a href="https://github.com/terasum/lettor">lettor</a> </p>
 </div>
-<script src="scripts/jquery-1.7.2.min.js"></script>
-<script src="scripts/highlight.pack.js"></script>
-<script src="scripts/md-toc.js"></script>
+<script src="theme/scripts/jquery-1.7.2.min.js"></script>
+<script src="theme/scripts/highlight.pack.js"></script>
+<script src="theme/scripts/md-toc.js"></script>
 <script type="text/javascript">
     new Toc('content',{
         'level':3,
